Adjusted sprites position to overlap other elements + Fix hidden timer

--- a/styles.css
+++ b/styles.css
@@ -123,11 +123,11 @@ body {
 }
 
 .timer button img {
-    width: 80px;
-    height: 80px;
-    margin-top: 20px;
+    width: 90px;
+    height: 90px;
+    margin-top: -30px;
     margin-bottom: -5px;
-    margin-left: -25px;
+    margin-left: -35px;
 }
 
 .timer button .timer-info {
